--- a/plugins/google-play-services/events/event.html
+++ b/plugins/google-play-services/events/event.html
@@ -95,8 +95,9 @@
 
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
+            <button class="mobile-button"></button>
             <!-- Side Navigation Bar -->
-            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -153,7 +154,7 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom;">
                     <h1 class="h2 text-white-shadow">Google Play Event</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
@@ -178,7 +179,7 @@
                             style="max-width: 70%;">
                     </div>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px;">
+                <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px; overflow-x: auto;">
                     <table class="table table-striped table-bordered table-documentation"
                         style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
                         <thead class="thead-dark">
@@ -214,7 +215,7 @@
                             <tr>
                                 <td>Value</td>
                                 <td>int64</td>
-                                <td>
+                                <td style="min-width: 300px">
                                     The increment counter for the event.</br>
                                     This value increases as you make use of the <a href="incrementing_event.html">Incrementing an Event</a> blueprint.
                                 </td>
