--- a/plugins/google-play-services/events/event_error.html
+++ b/plugins/google-play-services/events/event_error.html
@@ -95,8 +95,9 @@
 
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
+            <button class="mobile-button"></button>
             <!-- Side Navigation Bar -->
-            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -164,7 +165,7 @@
                     </div>
                 </div>
                 <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative; overflow-x: auto;">
                         <table class="table table-striped table-bordered table-documentation"
                             style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
                             <thead class="thead-dark">
@@ -176,7 +177,7 @@
                             <tbody>
                                 <tr>
                                     <td>NO_CONNECTION</td>
-                                    <td>
+                                    <td style="min-width: 300px">
                                         Failure when attempting to form a connection to Google or the local cache on the device.</br>
                                         Can occur when <a href="fetch_events.html">Loading Events</a>.
                                     </td>
