--- a/plugins/google-play-services/events/getting_started.html
+++ b/plugins/google-play-services/events/getting_started.html
@@ -95,8 +95,9 @@
 
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
+            <button class="mobile-button"></button>
             <!-- Side Navigation Bar -->
-            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -182,7 +183,7 @@
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/Events/Events_Plugin_Enabled.png">
+                                    <img style="max-width: 80%" src="../../../images/Events/Events_Plugin_Enabled.png">
                                 </div>
                             </div>
                             <li class="list-group-item">
@@ -198,7 +199,7 @@
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/Events/Events_Plugin_Config.png">
+                                    <img style="max-width: 80%" src="../../../images/Events/Events_Plugin_Config.png">
                                 </div>
                             </div>
                             <li class="list-group-item">
@@ -211,7 +212,7 @@
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/UE_Blueprint_GoogleLogin.png">
+                                    <img style="max-width: 80%" src="../../../images/UE_Blueprint_GoogleLogin.png">
                                 </div>
                             </div>
                         </ol>
