--- a/plugins/google-play-services/saved-games/getting_started.html
+++ b/plugins/google-play-services/saved-games/getting_started.html
@@ -95,7 +95,9 @@
     <!-- Side Navigation Bar -->
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
-            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
+            <button class="mobile-button"></button>
+            <!-- Side Navigation Bar -->
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -209,7 +211,7 @@
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/SavedGames/SavedGames_Plugin_Enabled.png">
+                                    <img style="max-width: 80%" src="../../../images/SavedGames/SavedGames_Plugin_Enabled.png">
                                 </div>
                             </div>
                             <li class="list-group-item">
@@ -217,16 +219,16 @@
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 Enable "Google Play Support", "Snapshot Support on Google Play Login" and ensure your "Games App ID" is set appropriately for your app.</br>
-                                Go to <span style="font-weight: 500; white-space: nowrap;">Project Settings</span> ->
-                                <span style="font-weight: 500; white-space: nowrap;">Android</span> -> <span
-                                    style="font-weight: 500; white-space: nowrap;">Google Play Services</span> and
-                                enable: "<span style="font-weight: 500; white-space: nowrap;">Enable Google Play
-                                    Support</span>" and "<span style="font-weight: 500; white-space: nowrap;">Enable
+                                Go to <span style="font-weight: 500;">Project Settings</span> ->
+                                <span style="font-weight: 500;">Android</span> -> <span
+                                    style="font-weight: 500;">Google Play Services</span> and
+                                enable: "<span style="font-weight: 500;">Enable Google Play
+                                    Support</span>" and "<span style="font-weight: 500;">Enable
                                     Snapshots on Google Play login</span>".
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/SavedGames/SavedGames_Plugin_Config.png">
+                                    <img style="max-width: 80%" src="../../../images/SavedGames/SavedGames_Plugin_Config.png">
                                 </div>
                             </div>
                             <li class="list-group-item">
@@ -239,7 +241,7 @@
                             </p>
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img src="../../../images/UE_Blueprint_GoogleLogin.png">
+                                    <img style="max-width: 80%" src="../../../images/UE_Blueprint_GoogleLogin.png">
                                 </div>
                             </div>
                         </ol>
