--- a/plugins/google-play-services/saved-games/snapshot.html
+++ b/plugins/google-play-services/saved-games/snapshot.html
@@ -95,7 +95,9 @@
     <!-- Side Navigation Bar -->
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
-            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
+            <button class="mobile-button"></button>
+            <!-- Side Navigation Bar -->
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -207,7 +209,7 @@
                                 style="max-width: 70%;">
                         </div>
                     </div>
-                    <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px;">
+                    <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px; width: 100%; overflow-x: auto">
                         <table class="table table-striped table-bordered table-documentation"
                             style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
                             <thead class="thead-dark">
@@ -221,7 +223,7 @@
                                 <tr>
                                     <td>SaveGameObject</td>
                                     <td>UObject*</td>
-                                    <td>
+                                    <td style="min-width: 300px;">
                                         A pointer to the binary data of the save game object itself.</br>
                                         Must be cast to the appropriate object type when making use of it.</br>
                                         Defined when <a href="saving_game.html">Saving a Game</a>.
@@ -230,7 +232,7 @@
                                 <tr>
                                     <td>SnapshotMetadata</td>
                                     <td><a href="snapshot_metadata.html">SnapshotMetadata</a></td>
-                                    <td>
+                                    <td style="min-width: 300px;">
                                         A struct containing various additional pieces of information about the Snapshot.
                                     </td>
                                 </tr>
