--- a/plugins/google-play-services/saved-games/snapshot_error.html
+++ b/plugins/google-play-services/saved-games/snapshot_error.html
@@ -95,7 +95,9 @@
     <!-- Side Navigation Bar -->
     <div class="container-fluid">
         <div class="row" style="margin-left: 7px">
-            <nav class="col-md-2 d-none d-md-block sidebar sidebar-custom">
+            <button class="mobile-button"></button>
+            <!-- Side Navigation Bar -->
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -191,7 +193,7 @@
                     </div>
                 </div>
                 <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative; overflow-x: auto">
                         <table class="table table-striped table-bordered table-documentation"
                             style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
                             <thead class="thead-dark">
@@ -225,7 +227,7 @@
                                 </tr>
                                 <tr>
                                     <td>READ_SNAPSHOT_FAILED</td>
-                                    <td>
+                                    <td style="min-width: 300px;">
                                         The binary contents of the snapshot are corrupt.</br>
                                         Can occur at all points when attempting to extract the binary data of a
                                         Snapshot.
