add get it on unreal buttons to homepage and update new tag

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/saved-games/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom blue">
-              <span class="badge-alert">New!</span>
+              <img class="new-tag" alt='New!' src='images/NewTag.png' />
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Saved Games</h5>
               </div>
@@ -125,6 +125,9 @@
                   Unreal Engine blueprint nodes exposing Google Play's cloud-saving service to Android Game
                   Developers.
                 </p>
+                <a href="https://www.unrealengine.com/marketplace/en-US/product/81a9c3e023a949c7bc5b868e32f253d1" class="btn btn-custom" target="_blank">
+                  <img alt="Get it on UE Marketplace" src="images/GetItOnUEMarketplace.png" />
+                </a>                
               </div>
             </div>
           </a>
@@ -132,7 +135,7 @@
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/events/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom blue">
-              <span class="badge-alert">New!</span>
+              <img class="new-tag" alt='New!' src='images/NewTag.png' />
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Events</h5>
               </div>
@@ -142,6 +145,9 @@
                   Unreal Engine blueprint nodes exposing Google Play's event analytics service to Android Game
                   Developers.
                 </p>
+                <a href='https://www.unrealengine.com/marketplace/en-US/product/7ea00486f68840c8a03c2134ec97db52' class="btn btn-custom" target="_blank">
+                  <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                </a>
               </div>
             </div>
           </a>
@@ -167,7 +173,7 @@
                 <p class="card-text">
                   A free procedurally generated endless runner with high scores, achievements and quests.
                 </p>
-                <a href='https://play.google.com/store/apps/details?id=com.JoshKarpul.Squiggle&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' class="btn btn-custom">
+                <a href='https://play.google.com/store/apps/details?id=com.JoshKarpul.Squiggle&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' class="btn btn-custom" target="_blank">
                   <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' />
                 </a>
               </div>
