secretly add billing page

--- a/plugins/google-play-services/billing/contact.html
+++ b/plugins/google-play-services/billing/contact.html
@@ -115,12 +115,32 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="incrementing_event.html">
-                                Incrementing an Event
+                                Querying Product Details
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="fetch_events.html">
-                                Loading Events
+                                Launch Billing Flow
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Check for Purchases
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Query Purchase History
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Show In-App messages
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Is Feature Supported
                             </a>
                         </li>
                         <hr />
@@ -129,12 +149,32 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="event.html">
-                                Event
+                                Product Details
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="event_error.html">
-                                Event Error
+                                Purchase
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Purchase History Record
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Product Type
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Feature Type
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Billing Response Code
                             </a>
                         </li>
                         <hr />
