--- a/plugins/google-play-services/billing/overview.html
+++ b/plugins/google-play-services/billing/overview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Contact</title>
+    <title>UE Plugin | Billing</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -104,7 +104,7 @@
                             <a class="nav-link disabled">Developer Guidelines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="overview.html">
+                            <a class="nav-link active" href="overview.html">
                                 Overview
                             </a>
                         </li>
@@ -115,12 +115,32 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="incrementing_event.html">
-                                Incrementing an Event
+                                Querying Product Details
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="fetch_events.html">
-                                Loading Events
+                                Launch Billing Flow
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Check for Purchases
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Query Purchase History
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Show In-App messages
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_events.html">
+                                Is Feature Supported
                             </a>
                         </li>
                         <hr />
@@ -129,12 +149,32 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="event.html">
-                                Event
+                                Product Details
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="event_error.html">
-                                Event Error
+                                Purchase
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Purchase History Record
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Product Type
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Feature Type
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Billing Response Code
                             </a>
                         </li>
                         <hr />
@@ -142,7 +182,7 @@
                             <a class="nav-link disabled">Support</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contact.html">
+                            <a class="nav-link inactive" href="contact.html">
                                 Contact
                             </a>
                         </li>
@@ -153,18 +193,40 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Contact</h1>
+                <div class="container border-bottom"
+                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow">Billing Overview</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
+                        <p class="content">
+                            <b>The Google Play Service: Billing</b>
+                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            You can get support by emailing us at "porretgaming@gmail.com". </br></br>
-                            Get in touch with our community on our <a href="https://discord.gg/DYTNxrXG">Discord Server</a>.
+                            To be completed...
                         </p>
                     </div>
-                </div>
-                <div style="margin-bottom: 800px">
+                    <div class="info" style="margin-top: 20px">
+                        <p class="content">
+                            <b>The Unreal Engine Plugin</b>
+                        </p>
+                        <p class="content">
+                            To be completed...
+                        </p>
+                        <p class="content">
+                            To be completed...
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            To be completed...
+                        </p>
+                    </div>
+                    <!-- <div class="info" style="margin-top: 20px"> -->
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/Billing/Billing_Plugin_AllNodes.png" style="width: 80%">
+                    </div>
+                    <!-- </div> -->
+                    <div style="margin-bottom: 400px">
+                    </div>
                 </div>
             </main>
         </div>
